--- a/index.html
+++ b/index.html
@@ -137,62 +137,7 @@ a.get("micael asiak");
             <hr/>
 
             <div class="row">
-                <div class="span3" id="example">
-                    <h2>Example</h2>
-                    <input type="search" placeholder="Type misspelled state" id="example"/>
-                    <ul id="results">
-                    </ul>
-                </div>
-                <div class="span9">
-                <h2>Theory of Operation</h2>
-
-                <h3>Adding to the data structure</h3>
-                <p>First let's look at adding a string, 'michaelich' to an empty set. We first break apart the string into n-grams (strings of length
-                n). So trigrams of 'michaelich' would look like:</p>
-                <pre>'-mi'
-'mic'
-'ich'
-'cha'
-'hae'
-'ael'
-'eli'
-'lic'
-'ich'
-'ch-' </pre>
-                <p>Note that fuzzyset will first normalize the string by removing non word characters except for spaces and commas and force
-                everything to be lowercase.</p>
-                <p>Next the fuzzyset essentially creates a reverse index on those grams. Maintaining a dictionary that says:</p>
-                <pre>'mic' -&gt; (1, 0)
-'ich' -&gt; (2, 0)
-...</pre>
-                <p>where the first number is the number of grams and the second number is the index of the item in a list that looks like:</p>
-                <pre>[[3.31, 'michaelich']]</pre>
-                <p>Note that we maintain this reverse index for <em>all</em> grams from <code>gram_size_lower</code> to <code>gram_size_upper</code> in the constructor.
-                This becomes important in a second.</p>
-                <h3>Retrieving</h3>
-                <p>To search the data structure, we take the n-grams of the query string and perform a reverse index look up. To illustrate,
-                let's consider looking up <code>'michael'</code> in our fictitious set containing <code>'michaelich'</code> where the <code>gram_size_upper</code>
-                and <code>gram_size_lower</code> parameters are default (3 and 2 respectively).</p>
-                <p>We begin by considering first all trigrams (the value of <code>gram_size_upper</code>). Those grams are:</p>
-                <pre>'-mi'
-'mic'
-'ich'
-'cha'
-'el-'</pre>
-                <p>Then we create a list of any element in the set that has <em>at least one</em> occurrence of a trigram listed above. Note that
-                this is just a dictionary lookup 5 times. For each of these matched elements, we compute the <a href="http://en.wikipedia.org/wiki/Cosine_similarity">cosine similarity</a> between
-                each element and the query string. We then sort to get the most similar matched elements.</p>
-                <p>If <code>use_levenshtein</code> is false, then we return all top matched elements with the same cosine similarity.</p>
-                <p>If <code>use_levenshtein</code> is true, then we truncate the possible search space to 50, compute a score based on the <a href="http://en.wikipedia.org/wiki/Levenshtein_distance">Levenshtein
-                distance</a> (so that we handle transpositions), and return based on that.</p>
-                <p>In the event that none of the trigrams matched, we try the whole thing again with bigrams (note though that if there are no matches,
-                the failure to match will be quick). Bigram searching will always be slower because there will be a much larger set to order.</p>
-
-                <br />
-                <h2>For a UI to try your own examples, check out the <a href="viz/">debugging interface</a>.</h2>
-
-                <iframe src="viz/index.html" style="width: 100%; height: 1000px;"></iframe>
-                </div>
+                <iframe src="ui/index.html#starting" style="width: 100%; height: 8600px; border: 0;"></iframe>
             </div>
 
             <hr/>
@@ -208,96 +153,5 @@ a.get("micael asiak");
         <script src="site/js/vendor/bootstrap.min.js"></script>
 
         <script src="lib/fuzzyset.js"></script>
-        <script>
-            $(document).ready(function() {
-                var states = [
-                    "Alabama",
-                    "Alaska",
-                    "American Samoa",
-                    "Arizona",
-                    "Arkansas",
-                    "California",
-                    "Colorado",
-                    "Connecticut",
-                    "Delaware",
-                    "District of Columbia",
-                    "Florida",
-                    "Georgia",
-                    "Guam",
-                    "Hawaii",
-                    "Idaho",
-                    "Illinois",
-                    "Indiana",
-                    "Iowa",
-                    "Kansas",
-                    "Kentucky",
-                    "Louisiana",
-                    "Maine",
-                    "Maryland",
-                    "Massachusetts",
-                    "Michigan",
-                    "Minnesota",
-                    "Mississippi",
-                    "Missouri",
-                    "Montana",
-                    "Nebraska",
-                    "Nevada",
-                    "New Hampshire",
-                    "New Jersey",
-                    "New Mexico",
-                    "New York",
-                    "North Carolina",
-                    "North Dakota",
-                    "Northern Marianas Islands",
-                    "Ohio",
-                    "Oklahoma",
-                    "Oregon",
-                    "Pennsylvania",
-                    "Puerto Rico",
-                    "Rhode Island",
-                    "South Carolina",
-                    "South Dakota",
-                    "Tennessee",
-                    "Texas",
-                    "Utah",
-                    "Vermont",
-                    "Virginia",
-                    "Virgin Islands",
-                    "Washington",
-                    "West Virginia",
-                    "Wisconsin",
-                    "Wyoming"
-                ];
-                statesFuzzy = FuzzySet(states);
-                var resultsHtml = '';
-                var values = statesFuzzy.values();
-                for (var i = 0; i < states.length; ++i) {
-                    resultsHtml += '<li>'+ states[i] +'</li>\n';
-                }
-                $('#results').html(resultsHtml);
-
-                $('#example input').on('keyup', function(evt) {
-                    if ($(this).val()) {
-                        var results = statesFuzzy.get($(this).val()) || [];
-                        var $results = $('#results');
-                        var resultsHtml = '';
-                        if (!results.length) {
-                            $results.html('No results found :(');
-                        } else {
-                            for (var i = 0; i < results.length; ++i) {
-                                resultsHtml += '<li>'+ results[i][1] +'</li>\n';
-                            }
-                            $results.html(resultsHtml);
-                        }
-                    } else {
-                        var resultsHtml = '';
-                        for (var i = 0; i < states.length; ++i) {
-                            resultsHtml += '<li>'+ states[i] +'</li>\n';
-                        }
-                        $('#results').html(resultsHtml);
-                    }
-                });
-            });
-        </script>
     </body>
 </html>
