--- a/ui/index.html
+++ b/ui/index.html
@@ -134,6 +134,18 @@
   <link rel="dns-prefetch" href="https://user-images.githubusercontent.com/">
 
 
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@glenchsite" />
+  <meta name="twitter:creator" content="@glench" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="http://glench.github.io/fuzzyset.js/ui/" />
+  <meta property="og:title" content="Fuzzyset" />
+  <meta property="og:description" content="An interactive human-readable visualization of a code library" />
+  <meta property="og:image" content="http://glench.github.io/fuzzyset.js/ui/screenshot.png" />
+  
+
+
+
 
   <link media="all"  rel="stylesheet" href="./codemirror-5.38.0/lib/codemirror.css">
   <link media="all"  rel="stylesheet" href="./codemirror-5.38.0/theme/github.css">
@@ -147,7 +159,7 @@
 
   <meta name="viewport" content="width=device-width">
   
-  <title>Fuzzyset - How it Works, an interactive human-readable visualization of a code library</title>
+  <title>Fuzzyset - an interactive human-readable visualization of a code library</title>
     <meta name="description" content="A how-it-works-style research prototype for understanding a code library.">
   <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
 
@@ -818,7 +830,7 @@
       How it works.html
     </h3>
 
-      <article class="markdown-body entry-content" itemprop="text">
+      <article class="markdown-body entry-content" itemprop="text" id="starting">
         <h1>What it does</h1>
 
           <p>Fuzzyset.js creates a data structure to efficiently compute similarity scores in order to find likely misspellings in user input.</p>
@@ -1140,7 +1152,7 @@ fuzzyset.__get = function(value, gramSize, minMatchScore) {
 
           <p>before publishing: </p>
           <ul>
-            <li>switch react to production</li>
+            <li>add screenshot / link to README</li>
           </ul>
 
           <p>after publishing: </p>
