add tinyletter link

--- a/ui/index.html
+++ b/ui/index.html
@@ -242,7 +242,7 @@
           <p style="margin-bottom: -7px;">July 2018</p>
           <p>created at <a href="https://www.recurse.com/">The Recurse Center</a></p>
         </cite>
-        <small>P.S. If you're interested in this kind of thing, you might be interested in my newsletter about <a href="https://tinyletter.com/Flowsheets">The Future of Programming</a> &mdash; it even includes a post with more details about this document.</small>
+        <small>P.S. If you're interested in this kind of thing, you might be interested in my newsletter about <a href="https://tinyletter.com/Flowsheets">The Future of Programming</a> &mdash; it even includes <a href="https://tinyletter.com/Flowsheets/letters/how-fuzzyset-js-works-an-interactive-human-readable-visualization-of-a-code-library">a post with more details about this document</a>.</small>
       </div>
     </div>
     
