add UI embedded mode

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ a.get("micael asiak");
             <hr/>
 
             <div class="row">
-                <iframe src="ui/index.html#starting" style="width: 100%; height: 8600px; border: 0;"></iframe>
+                <iframe src="ui/index.html?embedded" style="width: 100%; height: 8600px; border: 0;"></iframe>
             </div>
 
             <hr/>
@@ -154,10 +154,5 @@ a.get("micael asiak");
 
         <script src="lib/fuzzyset.js"></script>
 
-        <script>
-            $('iframe').on('load', function(evt) {
-                setTimeout(function() { window.scrollTo(0,0) }, 1000)
-            })
-        </script>
     </body>
 </html>
