small wording tweak

--- a/ui/index.html
+++ b/ui/index.html
@@ -918,7 +918,7 @@ _gramCounter = function(value, gramSize) {
             Uh oh, there was an error. Do you have JavaScript enabled?
           </div>
 
-          <p>And that is how Fuzzyset.js calculates a similarity score for two strings.</p>
+          <p>And that is how Fuzzyset.js calculates a similarity score for two strings. Perfect matches have a score of 1, and completely dissimilar matches have a score of 0. Try it out!</p>
 
           <h1>Storing the Dictionary</h1>
 
