--- a/ui/index.html
+++ b/ui/index.html
@@ -2257,5 +2257,6 @@ docReady(function() {
   }
 </script>
 
+<script async defer data-domain="glench.github.io/fuzzyset.js/ui" src="https://plausible.io/js/plausible.js"></script>
 
 </body></html>
